[package]
name = "lonewolf-auth-toolkit"
version = "0.1.0"
edition = "2021"
description = "This package adds some handy helper functions related to authentication."
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bcrypt = "0.15.1"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
libmath = "0.2.1"
md5 = "0.7.0"
rand = { version = "0.8.5", features = ["serde"] }
tokio = { version = "1.37.0", features = ["full"] }
totp-rs = { version = "5.5.1", features = ["qr", "serde", "rand"] }
uuid = "1.8.0"
